--- a/styles.css
+++ b/styles.css
@@ -18,23 +18,27 @@ body {
     width: 500px;
     height: 150px;
     top: 20%;
-    background-color: rgba(0,0,0,0.6);
+    background-color: rgba(0,0,0,0.3);
     text-align: center;
 }
 #icon {
     width: 300px;
     margin-top: 30px;
+    margin-left: -50px; 
 }
 
 .sidebar {
     width: 500px;
     height: 100vh;
     text-align: center;
+    background-color: rgb(102, 82, 82);
 }
 
 #main-image {
     width: 500px;
     height: 100vh;
+    opacity: 0.6;
+    
 }
 
 .ref {
@@ -53,15 +57,20 @@ a {
 .main-content {
     flex: 1;
     height: 100vh;
+    display: flex;
+    flex-direction: column;
 }
 
 .header, .footer {
     font-weight: 600;
     background-color: rgb(243, 243, 243);
-    padding: 20px;
-    padding-top: 15%;
-    padding-right: 30%;
     box-shadow: 2px -2px 2px rgba(190, 190, 190,0.3);
+    display: flex;
+    padding: 40px 20px;
+    flex-direction: column;
+    justify-content: center;
+    flex: 1;
+
 }
 
 .login {
@@ -75,7 +84,7 @@ a {
 .create {
     color: white;
     margin: 15px 20px;
-    background-color: rgb(6, 88, 64);
+    background-color: rgb(129, 55, 12);
     border-radius: 5px;
     padding: 10px;
     padding-bottom: 10px;
@@ -86,6 +95,7 @@ a {
 }
 button {
     text-align: center;
+    width: 200px;
 }
 
 .form-body {
@@ -94,17 +104,53 @@ button {
     display: flex;
     flex-wrap: wrap;
     gap: 20px;
+    flex: 1;
 }
 
 label {
     display: block;
     margin-bottom: 2px;
+    font-size: 0.7rem;
+    letter-spacing: 2px;
 }
 
 .entry {
-width: 30vw;
+width: 25vw;
 }
 
 h2 {
     width: 100%;
+}
+
+img {
+    opacity: 1;
+}
+
+input {
+    border-color: #E5E7EB;
+    border-radius: 2px;
+    border-width: 2px;
+    border-style: solid;
+}
+
+
+input:focus {
+    border-color: rgb(54, 54, 255);
+    border-radius: 3px;
+    border-width: 1px;
+    border-style: solid;
+    box-shadow: 1px 1px 1px rgba(0,0,0,0.3);
+}
+
+input:invalid {
+    border-color: red;
+    border-radius: 3px;
+    border-width: 1px;
+}
+
+
+input[type="email"]:valid {
+    border-color: green;
+    border-radius: 3px;
+    border-width: 2px;
 }
