Added JS to validate password entry. Completed project, added javascript to validate passwords. Will color text field border red and display a passwords do not match text

--- a/styles.css
+++ b/styles.css
@@ -137,20 +137,30 @@ input {
 input:focus {
     border-color: rgb(54, 54, 255);
     border-radius: 2px;
-    border-width: 1px;
+    border-width: 0.5px;
     border-style: solid;
-    box-shadow: 1px 1px 1px rgba(0,0,0,0.3);
+    box-shadow: 2px 2px 4px 1px rgba(0,0,0,0.1);
 }
 
-input:invalid {
+input:focus-visible {
+    outline: none;
+}
+
+.error {
     border-color: red;
     border-radius: 3px;
     border-width: 1px;
 }
 
-
-input[type="email"]:valid {
+.good {
     border-color: green;
     border-radius: 3px;
-    border-width: 2px;
+    border-width: 1px;
+}
+
+#nomatch {
+    color: red;
+    margin-top: 0px;
+    font-size: 0.8rem;
+    font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif
 }
